--- a/recipes/Jollof rice.html
+++ b/recipes/Jollof rice.html
@@ -87,6 +87,11 @@
           When the liquid has almost dried up add the remaining tomato stew, cover, and let it cook for another 5-10 minutes heat until the liquid has completely dried up. Turn off the heat, mix thoroughly, and your Jollof Rice is ready to be eaten!
 		    </p>
 	    </li>
+
+	    <li>
+		    <button>
+			    <a href=" Jollof.html">Back to top</a>
+	    </li>
     </ol>
 
     </body>
