--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <li><a href="./recipes/Egusi.html">Egusi soup</a> </li>
 	
 	
-        <li> <a href="./recipes/Jollof rice.html"> Jollof rice </a> </li>
+        <li> <a href="./recipes/Jollof_rice.html"> Jollof rice </a> </li>
 	
         
 	<li>
