--- a/recipes/Afang.html
+++ b/recipes/Afang.html
@@ -73,7 +73,7 @@
                   </ol>
           <p>
           <button>
-          <a href="afang.html">Back to top
+          <a href="Afang.html">Back to top
          
           </a>
           </button>
