--- a/recipes/Jollof_rice.html
+++ b/recipes/Jollof_rice.html
@@ -90,7 +90,7 @@
 
 	    <li>
 		    <button>
-			    <a href=" Jollof.html">Back to top</a>
+			    <a href=" Jollof_rice.html">Back to top</a>
 	    </li>
     </ol>
 
